# communitynotes

./: .gitignore  Bao_notes.md  Makefile  README.md  pyproject.toml  requirements.txt
sourcecode/: extract_model_intercept.py
sourcecode/data/tiny_data/: create_tiny_data.py
sourcecode/scoring/: constants.py  helpfulness_scores.py  mf_base_scorer.py  mf_core_scorer.py  note_ratings.py  note_status_history.py  run_scoring.py  runner.py  scorer.py  scoring_rules.py
synthetic_data/2025-08-21_results/: Fig.2.ipynb  Fig1.ipynb  Fig1_supp.ipynb  Fig2.ipynb  Fig3.ipynb  Fig3_cross_section copy.ipynb  Fig3_cross_section.ipynb  Fig3_grid.ipynb  README.md  definitions.json  stylesheet.mplstyle
synthetic_data/2025-08-21_results/Homophily_HIGH_UPol_HIGH_NPol_HIGH/FP_count/: helpfulness_False.csv
synthetic_data/2025-08-21_results/Homophily_HIGH_UPol_LOW_NPol_LOW/FP_count/: helpfulness_False.csv  helpfulness_True.csv
synthetic_data/2025-08-21_results/Homophily_LOW_UPol_HIGH_NPol_LOW/FP_count/: helpfulness_False.csv  helpfulness_True.csv
synthetic_data/2025-08-21_results/Homophily_LOW_UPol_LOW_NPol_HIGH/FP_count/: helpfulness_False.csv  helpfulness_True.csv
synthetic_data/2025-08-21_results/Homophily_LOW_UPol_LOW_NPol_LOW/FP_count/: helpfulness_False.csv  helpfulness_True.csv
synthetic_data/2025-08-21_results/bad_actor_no_bias_grid/FP_count/: helpfulness_False.csv  helpfulness_True.csv
synthetic_data/scripts/: command_notes.md  count_FP_FN.py  count_success.py  create_archive.sh  create_archive_2025-07-15.sh  plot_FP_FN.ipynb  run_multiple_times.sh  sbatch_by_file.sh
(+16 files in other folders)
